<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">serge</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tryLogin">Try Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="serverUrl">Server URL</string>
    <string name="create_account_help_text">Server Setup</string>
    <string name="save">Save</string>
    <string name="setup_header">Header</string>
    <string name="serge">Serge</string>

</resources>
